Entity Framework Core module completed

--- a/TheWorld/appsettings.json
+++ b/TheWorld/appsettings.json
@@ -8,5 +8,8 @@
 
   "MailSettings": {
     "ToAddress": "velikimret@yahoo.com"
-  }
+  },
+
+  "ConnectionStrings":
+  { "WorldContextConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TheWorldDb;Trusted_Connection=true;MultipleActiveResultSets=true;" }
 }
