--- a/TheWorld/appsettings.json
+++ b/TheWorld/appsettings.json
@@ -10,6 +10,9 @@
     "ToAddress": "velikimret@yahoo.com"
   },
 
-  "ConnectionStrings":
-  { "WorldContextConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TheWorldDb;Trusted_Connection=true;MultipleActiveResultSets=true;" }
+  "ConnectionStrings": { "WorldContextConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TheWorldDb;Trusted_Connection=true;MultipleActiveResultSets=true;" },
+
+  "Keys": {
+    "BingKey": "DONTEVERPUTKEYSINSOURCECONTROL"
+  }
 }
